# template-python

./: .gitignore  Makefile  README.md  justfile  pyproject.toml
my_app/: __main__.py
my_app/my_package/: my_module.py
tests/: conftest.py  test_never_fails.py
