[tool.black]
line-length = 79

[tool.isort]
line_length = 79
known_local_folder = []

[tool.poetry]
name = "My app name"
version = "0.0.1"
description = "My app description"
authors = ["me <me@fake.com>"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "slow: marks test as slow (deselect with '-m \"not slow\"')",
]