[project]
name = "my-app-name"
version = "0.1.0"
description = "Add your description here"
license = "None"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = []

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["slow: marks test as slow (deselect with '-m \"not slow\"')"]

[tool.ruff]
line-length = 79
indent-width = 4
output-format = "full"
target-version = "py314"

